WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287474
REGRESSION(
290095@main
): [Skia] Tests are crashing due to assert in SingleThreadIntegralWrapper<unsigned int>::operator++()
https://bugs.webkit.org/show_bug.cgi?id=287474
Summary
REGRESSION(290095@main): [Skia] Tests are crashing due to assert in SingleThr...
Carlos Garcia Campos
Reported
2025-02-11 01:13:25 PST
In
290095@main
FilterEffect was changed to use CheckedPtr which makes filters no longer usable from different threads. We record a DisplayList in the main thread, and replay it in worker threads for painting layers, so we need to use CanMakeThreadSafeCheckedPtr instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-02-11 01:20:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40407
EWS
Comment 2
2025-02-11 03:07:32 PST
Committed
290205@main
(eec67ecd7dc5): <
https://commits.webkit.org/290205@main
> Reviewed commits have been landed. Closing PR #40407 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-11 03:08:16 PST
<
rdar://problem/144603812
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug