REGRESSION(290095@main): [Skia] Tests are crashing due to assert in SingleThreadIntegralWrapper<unsigned int>::operator++() https://bugs.webkit.org/show_bug.cgi?id=287474

Reviewed by Philippe Normand.

In 290095@main FilterEffect was changed to use CheckedPtr which makes
filters no longer usable from different threads. We record a DisplayList
in the main thread, and replay it in worker threads for painting layers,
so we need to use CanMakeThreadSafeCheckedPtr instead.

* Source/WebCore/platform/graphics/filters/FilterEffect.h:

Canonical link: https://commits.webkit.org/290205@main